<resources>
    <string name="app_name">TastyRecipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorite</string>
    <string name="food_joke">Joke</string>
    <string name="new_recipe">New Recipe</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="_100">100</string>
    <string name="pescatarian">Pescatarian</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegan">Vegan</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole_30">Whole 30</string>
    <string name="apply">Apply</string>
    <string name="diet_type">Diet Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="finger_food">Finger Food</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="meal_type">Meal Type</string>
    <string name="search">Search</string>
</resources>