<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".bottomSheets.RecipesBottomSheet">

    <TextView
        android:id="@+id/mealType_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/meal_type"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/meal_type_scrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealType_text">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/meal_type_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checkedChip="@id/main_course_meal_chip"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/main_course_meal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_course" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/side_dish_meal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/side_dish" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/dessert_meal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dessert" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/appetizer_meal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appetizer" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/salad_meal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salad" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/bread_meal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bread" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/breakfast_meal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/soup_meal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soup" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/beverage_meal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beverage" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/sauce_meal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sauce" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/marinade_meal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marinade" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/finger_food_meal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/finger_food" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/snack_meal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snack" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/drink_meal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drink" />

            </com.google.android.material.chip.ChipGroup>


        </LinearLayout>
    </HorizontalScrollView>


    <TextView
        android:id="@+id/dietType_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/diet_type"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_type_scrollView" />

    <HorizontalScrollView
        android:id="@+id/diet_type_scrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dietType_txt">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/diet_type_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:checkedChip="@id/gluten_free_diet_chip"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/gluten_free_diet_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gluten_free" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/ketogenic_diet_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ketogenic" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/vegan_diet_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegan" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/pescatarian_diet_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pescatarian" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/paleo_diet_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paleo" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/primal_diet_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/primal" />

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/whole30_diet_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whole_30" />

            </com.google.android.material.chip.ChipGroup>


        </LinearLayout>
    </HorizontalScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diet_type_scrollView" />


</androidx.constraintlayout.widget.ConstraintLayout>