<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainViewModel"
            type="com.rana.hamza.tastyrecipes.viewModels.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.recipe.RecipesFragment">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:menu="@menu/top_app_bar"
                app:title="@string/recipes_fragment" />

        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/recipes_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:contentDescription="@string/new_recipe"
            android:focusable="true"
            android:src="@drawable/ic_restaurant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/error_imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:alpha="0.5"
            readApiResponse="@{mainViewModel.recipeResponse}"
            readDatabase="@{mainViewModel.readRecipes}"
            android:contentDescription="@string/no_internet_connection"
            android:src="@drawable/ic_sad"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.37" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/error_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.5"
            readApiResponse2="@{mainViewModel.recipeResponse}"
            readDatabase2="@{mainViewModel.readRecipes}"
            android:text="@string/no_internet_connection"
            android:textColor="?attr/colorControlNormal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/error_imageView"
            app:layout_constraintStart_toStartOf="@+id/error_imageView"
            app:layout_constraintTop_toBottomOf="@+id/error_imageView" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerFrameLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/placeholder_row_layout" />

                <include layout="@layout/placeholder_row_layout" />

                <include layout="@layout/placeholder_row_layout" />

                <include layout="@layout/placeholder_row_layout" />

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>